--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>dia das mulheres</title>
+    
+  </head>
+  <body>
+  <h1>Dia da Mulher</h1>
+<p>
+Para mim o dia em si é apenas um lembrete para que possamos honrar nossa ancestralidade feminina sempre no intuito de resgatar o Sagrado Feminino que há em todas nós.
+Saúdo a energia da Mãe Terra nossa fonte Criadora Feminina Maior e a mais importante de todas.
+Honro as que vieram antes e que tiverem a coragem de sacrificarem-se no intuito de conquistarem mais direitos e dignidade.
+Honro cada avó, cada mãe, cada irmã, cada filha, cada Ser lindo chamada Mulher que contribui para que possamos ser uma linda e grandiosa Roda de Mulheres nutridas de amor.
+Amo cada mulher em meu caminho, sei que juntas possuímos a energia e a força necessária para honrar nossa Ancestralidade Feminina e receber este dia com o significado que ele merece.</p>
+  </body>
+</html>
